# puzzle_api

./: Procfile  pyproject.toml  requirements.txt
app/: main.py  main.py.bkp
group_formation/: EA.py  Ga.py  SetFitness.py  arquivo.py  individual.py
teste/: locustfile.py
